[project]
name = "transplant-logistics-env"
version = "1.0.0"
description = "Real-world organ transplant logistics and allocation environment for RL agent training"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.7",
    "httpx>=0.28.1",
    "openai>=2.7.2",
    "python-multipart>=0.0.18",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/Thanya710/transplant-logistics-env"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.openenv]
name = "transplant-logistics-env"
version = "1.0.0"
entry_point = "server.app:app"
port = 7860